--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <!--主要 ナビゲーション-->
         <nav>
-            <div class="logo">a</div>
+            <div class="logo"></div>
 
             <div class="hamburger-menu" onclick="toggleMenu(this)">
                 <div class="hamburger-line"></div>
@@ -44,6 +44,23 @@
             </ul>
         </nav>
     </header>
+
+    <div class="keyvisual slide">
+        <img src="./pic/サムネ1.png">
+        <img src="./pic/サムネ2.jpg">
+        <img src="./pic/サムネ3.jpg">
+        <img src="./pic/サムネ1.png">
+    </div>
+
+    <div class="about"></div>
+    <div class="important"></div>
+    <div class="today-info"></div>
+    <div class="content">
+        <div class="picup"></div>
+        <div class="news"></div>
+        <div class="event"></div>
+        <div class="price"></div>
+    </div>
 
 
 
