--- a/index.html
+++ b/index.html
@@ -52,8 +52,23 @@
         <img src="./pic/サムネ1.png">
     </div>
 
-    <div class="about"></div>
-    <div class="important"></div>
+    <div class="about">
+        <h1>
+            ようこそ、深海生態研究水族館「ディープ・サンクチュアリ」へ。<br>
+            当施設は最先端の技術で再現された深海環境にて、神秘的な生物たちの生態を研究・展示しています。<br>
+            水族館としての楽しさと、研究施設としての知的好奇心を融合した、新しい“深海体験”をご提供します。
+        </h1>
+    </div>
+
+    <div class="important">
+        <p>重要なお知らせ</p>
+        <ul>
+            <li>2025.06.08（日）世界海洋デーのお知らせ</li>
+            <li>2025.06.01（日）防災の日・防災用品点検の日</li>
+            <li>2025.05.23（金）骨密度ケアの日</li>
+        </ul>
+    </div>
+
     <div class="today-info"></div>
     <div class="content">
         <div class="picup"></div>
