--- a/index.html
+++ b/index.html
@@ -70,12 +70,44 @@
     </div>
 
     <div class="today-info"></div>
+
     <div class="content">
-        <div class="picup"></div>
-        <div class="news"></div>
-        <div class="event"></div>
-        <div class="price"></div>
+        <div class="picup">
+            <p>本日の営業時間</p>
+            <ul>
+                <li>2025.06.08（日）世界海洋デーのお知らせ</li>
+                <li>2025.06.01（日）防災の日・防災用品点検の日</li>
+                <li>2025.05.23（金）骨密度ケアの日</li>
+            </ul>
+            <span class="wave"></span>
+        </div>
+        <div class="event">
+            <p>イベント</p>
+            <ul>
+                <li>2025.06.08（日）世界海洋デーのお知らせ</li>
+                <li>2025.06.01（日）防災の日・防災用品点検の日</li>
+                <li>2025.05.23（金）骨密度ケアの日</li>
+            </ul>
+        </div>
+        <div class="price">
+            <p>料金</p>
+            <ul>
+                <li>2025.06.08（日）世界海洋デーのお知らせ</li>
+                <li>2025.06.01（日）防災の日・防災用品点検の日</li>
+                <li>2025.05.23（金）骨密度ケアの日</li>
+            </ul>
+        </div>
+        <div class="factory-info">
+            <p>フロアマップ</p>
+            <ul>
+                <li><p>F1</p><img src="./pic/サムネ1.png"></li>
+                <li><p>F1</p><img src="./pic/サムネ1.png"></li>
+                <li><p>F1</p><img src="./pic/サムネ1.png"></li>
+            </ul>
+        </div>
     </div>
+
+
 
 
 
