--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="content">
         <div class="today-info">
-            <p>本日の営業時間</p>
+            <h3>本日の営業時間</h3>
             <div class="today-box">
                 <p class="today-box-title"><strong id="showtoday6"></strong></p>
                 <p>10:00〜17:00<span class="today-box-min">（最終入館 > 16:00まで）</span></p>
@@ -88,28 +88,37 @@
             </div>
             <div class="today-box">
                 <p class="today-box-title">現在の混雑情報</p>
-                <span>---</span>
+                <p>ーー</p>
+            </div>
+            <div class="today-box2">
+                <p>チケット購入　></p>
             </div>
             <span class="wave"><img src="./pic/wave.png"></span>
         </div>
+
         <div class="event">
-            <p>イベント</p>
-            <ul>
-                <li>2025.06.08（日）世界海洋デーのお知らせ</li>
-                <li>2025.06.01（日）防災の日・防災用品点検の日</li>
-                <li>2025.05.23（金）骨密度ケアの日</li>
-            </ul>
+            <h3>イベント</h3>
+            <div class="event-box">
+                <div class="slide2-btn slide2">
+                    <div class="event-box-item"><img src="./pic/サムネ2.jpg"><p>えさやり体験</p></div>
+                    <div class="event-box-item"><img src="./pic/サムネ3.jpg"><p>バックヤードツアー</p></div>
+                    <div class="event-box-item"><img src="./pic/サムネ2.jpg"><p>生態解説</p></div>
+                </div>
+            </div>
+            <span class="wave"><img src="./pic/wave3.png"></span>
         </div>
+
         <div class="price">
-            <p>料金</p>
+            <h3>料金</h3>
             <ul>
                 <li>2025.06.08（日）世界海洋デーのお知らせ</li>
                 <li>2025.06.01（日）防災の日・防災用品点検の日</li>
                 <li>2025.05.23（金）骨密度ケアの日</li>
             </ul>
+            <span class="wave"><img src="./pic/wave4.png"></span>
         </div>
         <div class="factory-info">
-            <p>フロアマップ</p>
+            <h3>フロアマップ</h3>
             <ul>
                 <li>
                     <p>F1</p><img src="./pic/サムネ1.png">
