--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <div class="content">
         <div class="today-info">
             <h3>本日の営業時間</h3>
+            <h4>< today-info ></h4>
             <div class="today-box">
                 <p class="today-box-title"><strong id="showtoday6"></strong></p>
                 <p>10:00〜17:00<span class="today-box-min">（最終入館 > 16:00まで）</span></p>
@@ -93,15 +94,16 @@
             <div class="today-box2">
                 <p>チケット購入　></p>
             </div>
-            <span class="wave"><img src="./pic/wave.png"></span>
+            <span class="wave"><img src="./pic/wave2.png"></span>
         </div>
 
         <div class="event">
             <h3>イベント</h3>
+            <h4>< event ></h4>
             <div class="event-box">
                 <div class="slide2-btn slide2">
-                    <div class="event-box-item"><img src="./pic/サムネ2.jpg"><p>えさやり体験</p></div>
-                    <div class="event-box-item"><img src="./pic/サムネ3.jpg"><p>バックヤードツアー</p></div>
+                    <div class="event-box-item"><img src="./pic/event1.png"><p>バックヤードツアー</p></div>
+                    <div class="event-box-item"><img src="./pic/event2.png"><p>えさやり体験</p></div>
                     <div class="event-box-item"><img src="./pic/サムネ2.jpg"><p>生態解説</p></div>
                 </div>
             </div>
@@ -110,6 +112,7 @@
 
         <div class="price">
             <h3>料金</h3>
+            <h4>< price ></h4>
             <ul>
                 <li>2025.06.08（日）世界海洋デーのお知らせ</li>
                 <li>2025.06.01（日）防災の日・防災用品点検の日</li>
@@ -119,6 +122,7 @@
         </div>
         <div class="factory-info">
             <h3>フロアマップ</h3>
+            <h4>< factory-info ></h4>
             <ul>
                 <li>
                     <p>F1</p><img src="./pic/サムネ1.png">
