--- a/index.html
+++ b/index.html
@@ -46,17 +46,15 @@
     </header>
 
     <div class="keyvisual slide">
-        <img src="./pic/サムネ1.png">
-        <img src="./pic/サムネ2.jpg">
-        <img src="./pic/サムネ3.jpg">
-        <img src="./pic/サムネ1.png">
+        <img src="./pic/サムネ1.png"><img src="./pic/サムネ2.jpg"><img src="./pic/サムネ3.jpg"><img src="./pic/サムネ1.png">
     </div>
 
     <div class="about">
         <h1>
             ようこそ、深海生態研究水族館「ディープ・サンクチュアリ」へ。<br>
             当施設は最先端の技術で再現された深海環境にて、神秘的な生物たちの生態を研究・展示しています。<br>
-            水族館としての楽しさと、研究施設としての知的好奇心を融合した、新しい“深海体験”をご提供します。
+            水族館としての楽しさと、研究施設としての知的好奇心を融合した、新しい“深海体験”をご提供します。<br>
+            探究と感動の旅が、今ここから始まります。
         </h1>
     </div>
 
@@ -75,7 +73,7 @@
             <h4>< today-info ></h4>
             <div class="today-box">
                 <p class="today-box-title"><strong id="showtoday6"></strong></p>
-                <p>10:00〜17:00<span class="today-box-min">（最終入館 > 16:00まで）</span></p>
+                <p class="today-box-text">10:00〜17:00<span class="today-box-min">（最終入館 > 16:00まで）</span></p>
                 <script>
                     document.getElementById("showtoday6").innerHTML = showtoday6();
                     function showtoday6() {
@@ -89,12 +87,12 @@
             </div>
             <div class="today-box">
                 <p class="today-box-title">現在の混雑情報</p>
-                <p>ーー</p>
+                <p class="today-box-text">ーー</p>
             </div>
             <div class="today-box2">
                 <p>チケット購入　></p>
             </div>
-            <span class="wave"><img src="./pic/wave2.png"></span>
+            <span class="wave"><img src="./pic/wave1.png"></span>
         </div>
 
         <div class="event">
@@ -104,10 +102,13 @@
                 <div class="slide2-btn slide2">
                     <div class="event-box-item"><img src="./pic/event1.png"><p>バックヤードツアー</p></div>
                     <div class="event-box-item"><img src="./pic/event2.png"><p>えさやり体験</p></div>
-                    <div class="event-box-item"><img src="./pic/サムネ2.jpg"><p>生態解説</p></div>
+                    <div class="event-box-item"><img src="./pic/event3.png"><p>生態解説</p></div>
                 </div>
             </div>
-            <span class="wave"><img src="./pic/wave3.png"></span>
+            <div class="event-box2">
+                <p>カレンダー　></p>
+            </div>
+            <span class="wave"><img src="./pic/wave2.png"></span>
         </div>
 
         <div class="price">
@@ -118,7 +119,7 @@
                 <li>2025.06.01（日）防災の日・防災用品点検の日</li>
                 <li>2025.05.23（金）骨密度ケアの日</li>
             </ul>
-            <span class="wave"><img src="./pic/wave4.png"></span>
+            <span class="wave"><img src="./pic/wave3.png"></span>
         </div>
         <div class="factory-info">
             <h3>フロアマップ</h3>
@@ -134,11 +135,13 @@
                     <p>F1</p><img src="./pic/サムネ1.png">
                 </li>
             </ul>
+            <span class="wave"><img src="./pic/wave4.png"></span>
         </div>
     </div>
 
-
-
+    <footer>
+        aaa
+    </footer>
 
 
 
