--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="about">
         <h1>
             ようこそ、深海生態研究水族館「ディープ・サンクチュアリ」へ。<br>
-            当施設は最先端の技術で再現された深海環境にて、神秘的な生物たちの生態を研究・展示しています。<br>
+            当施設は最先端の技術で再現された深海環境にて、生物たちの生態を研究・展示しています。<br>
             水族館としての楽しさと、研究施設としての知的好奇心を融合した、新しい“深海体験”をご提供します。<br>
             探究と感動の旅が、今ここから始まります。
         </h1>
@@ -89,7 +89,7 @@
                 <p class="today-box-title">現在の混雑情報</p>
                 <p class="today-box-text">ーー</p>
             </div>
-            <div class="today-box2">
+            <div class="bottom-box" style="color: #f1f1f1; background-color: #f86844;">
                 <p>チケット購入　></p>
             </div>
             <span class="wave"><img src="./pic/wave1.png"></span>
@@ -105,7 +105,7 @@
                     <div class="event-box-item"><img src="./pic/event3.png"><p>生態解説</p></div>
                 </div>
             </div>
-            <div class="event-box2">
+            <div class="bottom-box">
                 <p>カレンダー　></p>
             </div>
             <span class="wave"><img src="./pic/wave2.png"></span>
@@ -114,11 +114,30 @@
         <div class="price">
             <h3>料金</h3>
             <h4>< price ></h4>
-            <ul>
-                <li>2025.06.08（日）世界海洋デーのお知らせ</li>
-                <li>2025.06.01（日）防災の日・防災用品点検の日</li>
-                <li>2025.05.23（金）骨密度ケアの日</li>
-            </ul>
+                <div class="price-box">
+                    <div class="price-box-item">
+                        <p class="price-box-title">大人</p>
+                        <div class="price-box-text">
+                            <p>高校生以上</p><p>3000円</p>
+                        </div>
+                    </div>
+                    <div class="price-box-item">
+                        <p class="price-box-title">こども</p>
+                        <div class="price-box-text">
+                            <p>小・中学生</p><p>2000円</p>
+                        </div>
+                    </div>
+                    <div class="price-box-item">
+                        <p class="price-box-title">幼児</p>
+                        <div class="price-box-text">
+                            <p>5才以上</p><p>1000円</p>
+                        </div>
+                    </div>
+                </div>
+            
+            <div class="bottom-box">
+                <p>団体でお越しの方　></p>
+            </div>
             <span class="wave"><img src="./pic/wave3.png"></span>
         </div>
         <div class="factory-info">
@@ -140,7 +159,19 @@
     </div>
 
     <footer>
-        aaa
+        <div class="footer-box1">
+            <ul>
+                <li>企業情報</li>
+                <li>施設概要</li>
+                <li>個人情報保護方針</li>
+                <li>メディアポリシー</li>
+                <li>よくある質問</li>
+                <li>問い合わせ</li>
+            </ul>
+        </div>
+        <div class="footer-box2">
+            <p>DEEP SANCTUARY</p>
+        </div>
     </footer>
 
 
