--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
     <div class="content">
         <div class="today-info">
             <h3>本日の営業時間</h3>
-            <h4>< today-info ></h4>
+            <h4>
+                < today-info>
+            </h4>
             <div class="today-box">
                 <p class="today-box-title"><strong id="showtoday6"></strong></p>
                 <p class="today-box-text">10:00〜17:00<span class="today-box-min">（最終入館 > 16:00まで）</span></p>
@@ -97,12 +99,20 @@
 
         <div class="event">
             <h3>イベント</h3>
-            <h4>< event ></h4>
+            <h4>
+                < event>
+            </h4>
             <div class="event-box">
                 <div class="slide2-btn slide2">
-                    <div class="event-box-item"><img src="./pic/event1.png"><p>バックヤードツアー</p></div>
-                    <div class="event-box-item"><img src="./pic/event2.png"><p>えさやり体験</p></div>
-                    <div class="event-box-item"><img src="./pic/event3.png"><p>生態解説</p></div>
+                    <div class="event-box-item"><img src="./pic/event1.png">
+                        <p>バックヤードツアー</p>
+                    </div>
+                    <div class="event-box-item"><img src="./pic/event2.png">
+                        <p>えさやり体験</p>
+                    </div>
+                    <div class="event-box-item"><img src="./pic/event3.png">
+                        <p>生態解説</p>
+                    </div>
                 </div>
             </div>
             <div class="bottom-box">
@@ -113,28 +123,33 @@
 
         <div class="price">
             <h3>料金</h3>
-            <h4>< price ></h4>
-                <div class="price-box">
-                    <div class="price-box-item">
-                        <p class="price-box-title">大人</p>
-                        <div class="price-box-text">
-                            <p>高校生以上</p><p>3000円</p>
-                        </div>
-                    </div>
-                    <div class="price-box-item">
-                        <p class="price-box-title">こども</p>
-                        <div class="price-box-text">
-                            <p>小・中学生</p><p>2000円</p>
-                        </div>
-                    </div>
-                    <div class="price-box-item">
-                        <p class="price-box-title">幼児</p>
-                        <div class="price-box-text">
-                            <p>5才以上</p><p>1000円</p>
-                        </div>
+            <h4>
+                < price>
+            </h4>
+            <div class="price-box">
+                <div class="price-box-item">
+                    <p class="price-box-title">大人</p>
+                    <div class="price-box-text">
+                        <p>高校生以上</p>
+                        <p>3000円</p>
                     </div>
                 </div>
-            
+                <div class="price-box-item">
+                    <p class="price-box-title">こども</p>
+                    <div class="price-box-text">
+                        <p>小・中学生</p>
+                        <p>2000円</p>
+                    </div>
+                </div>
+                <div class="price-box-item">
+                    <p class="price-box-title">幼児</p>
+                    <div class="price-box-text">
+                        <p>5才以上</p>
+                        <p>1000円</p>
+                    </div>
+                </div>
+            </div>
+
             <div class="bottom-box">
                 <p>団体でお越しの方　></p>
             </div>
@@ -142,18 +157,80 @@
         </div>
         <div class="factory-info">
             <h3>フロアマップ</h3>
-            <h4>< factory-info ></h4>
+            <h4>
+                < factory-info>
+            </h4>
             <ul>
                 <li>
-                    <p>F1</p><img src="./pic/サムネ1.png">
+                    <p>F1</p><img src="./pic/F1.png">
                 </li>
                 <li>
-                    <p>F1</p><img src="./pic/サムネ1.png">
+                    <p>B1</p><img src="./pic/B1.png">
                 </li>
                 <li>
-                    <p>F1</p><img src="./pic/サムネ1.png">
+                    <p>B2</p><img src="./pic/B2.png">
+                </li>
+                <li>
+                    <p>B3</p><img src="./pic/B3.png">
                 </li>
             </ul>
+
+            <div class="bottom-box">
+                <p>バリアフリーについて　></p>
+            </div>
+        </div>
+        <div class="highlights">
+            <div class="highlights-box">
+                <div class="highlights-box-item">
+                    <div class="highlights-box-A">
+                        <p>1F エントランス</p>
+                        <p class="highlights-box-A-text">当施設をモチーフにした可愛らしいギフトが多数展開されています。<br>
+                            また同エリアのカフェではオリジナルフード・ラテを楽しむことができます。</p>
+                    </div>
+                    <div class="highlights-box-B">
+                        <img src="./pic/F1.png">
+                    </div>
+                </div>
+
+                <div class="highlights-box-item">
+                    <div class="highlights-box-A">
+                        <p>B1F 一般展示・水槽管理エリア</p>
+                        <p class="highlights-box-A-text">貴重な生き物たちが皆さまをお迎えします。<br>
+                            さらに、普段は見ることのできない水族館の裏側を特別公開！</p>
+                    </div>
+                    <div class="highlights-box-B">
+                        <img src="./pic/B1.png">
+                    </div>
+                </div>
+
+                <div class="highlights-box-item">
+                    <div class="highlights-box-A">
+                        <p>B2F 研究施設エリア</p>
+                        <p class="highlights-box-A-text">標本展示や最新の研究成果を学ぶことができます。<br>
+                            深海環境の再現実験や新種発見の歴史を紹介する展示も見どころです。</p>
+                    </div>
+                    <div class="highlights-box-B">
+                        <img src="./pic/B2.png">
+                    </div>
+                </div>
+
+                <div class="highlights-box-item">
+                    <div class="highlights-box-A">
+                        <p>B3F 人工深海ドーム</p>
+                        <p class="highlights-box-A-text">完全に外界の光を遮断し、深海8000m級の環境を再現した特別エリアです。<br>
+                            ここでしか見られない未知の深海生物たちが、ゆらめく光の中で神秘的な姿を見せます。</p>
+                    </div>
+                    <div class="highlights-box-B">
+                        <img src="./pic/B2.png">
+                    </div>
+                </div>
+
+                <div class="bottom-box">
+                    <p>バリアフリーについて　></p>
+                </div>
+
+            </div>
+
             <span class="wave"><img src="./pic/wave4.png"></span>
         </div>
     </div>
