--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
                 <li class="item">
                     <ul>
-                        <li><a href=”#”>イベント</a></li>
-                        <li><a href=”#”>料金のご案内</a></li>
-                        <li><a href=”#”>営業カレンダー</a></li>
-                        <li><a href=”#”>お知らせ</a></li>
-                        <li><a href=”#”>フロアマップ</a></li>
+                        <li><a>イベント</a></li>
+                        <li><a>料金のご案内</a></li>
+                        <li><a>営業カレンダー</a></li>
+                        <li><a>お知らせ</a></li>
+                        <li><a>フロアマップ</a></li>
                     </ul>
                 </li>
             </ul>
@@ -160,7 +160,7 @@
             <h4>
                 < factory-info>
             </h4>
-            <ul>
+            <ul class="factory-box">
                 <li>
                     <p>F1</p><img src="./pic/F1.png">
                 </li>
@@ -175,11 +175,11 @@
                 </li>
             </ul>
 
-            <div class="bottom-box">
-                <p>バリアフリーについて　></p>
-            </div>
         </div>
         <div class="highlights">
+            <h4>
+                < more>
+            </h4>
             <div class="highlights-box">
                 <div class="highlights-box-item">
                     <div class="highlights-box-A">
@@ -188,7 +188,7 @@
                             また同エリアのカフェではオリジナルフード・ラテを楽しむことができます。</p>
                     </div>
                     <div class="highlights-box-B">
-                        <img src="./pic/F1.png">
+                        <img src="./pic/F1a.png">
                     </div>
                 </div>
 
@@ -199,7 +199,7 @@
                             さらに、普段は見ることのできない水族館の裏側を特別公開！</p>
                     </div>
                     <div class="highlights-box-B">
-                        <img src="./pic/B1.png">
+                        <img src="./pic/B1a.png">
                     </div>
                 </div>
 
@@ -210,7 +210,7 @@
                             深海環境の再現実験や新種発見の歴史を紹介する展示も見どころです。</p>
                     </div>
                     <div class="highlights-box-B">
-                        <img src="./pic/B2.png">
+                        <img src="./pic/B2a.png">
                     </div>
                 </div>
 
@@ -221,18 +221,58 @@
                             ここでしか見られない未知の深海生物たちが、ゆらめく光の中で神秘的な姿を見せます。</p>
                     </div>
                     <div class="highlights-box-B">
-                        <img src="./pic/B2.png">
+                        <img src="./pic/B3a.png">
                     </div>
                 </div>
 
                 <div class="bottom-box">
-                    <p>バリアフリーについて　></p>
+                    <p>詳細はこちら　></p>
                 </div>
 
             </div>
 
             <span class="wave"><img src="./pic/wave4.png"></span>
         </div>
+
+
+        <div class="Luminaphosphora">
+            <h3>施設のみどころ</h3>
+            <h4>
+                < highlights-info>
+            </h4>
+            <div class="Lumina-box">
+
+                <div class="Lumina-box-A">
+                    <p>世界初公開！神秘のクラゲ<br>「ルミナ・フォスフォラ」<br>～Luminaphosphora～</p>
+                </div>
+                <div class="Lumina-box-B">
+                    <img src="./pic/ルミナ.png">
+                </div>
+                <div class="Lumina-box-A">
+                    <div>
+                        <p>＜発見の経緯＞</p>
+                        <p class="highlights-box-A-text">このクラゲは、深海探査プロジェクト「ネプチューン・リサーチ」により発見されました。</p>
+                    </div>
+
+                    <div>
+                        <p>＜特別展示エリア（B3F）＞</p>
+                        <p class="highlights-box-A-text">「ルミナ・フォスフォラ」の優雅に漂う姿は、まるで宇宙の星雲を眺めているよう。<br>
+                            最新の環境再現技術を駆使することで、水族館内での飼育に世界で初めて成功しました。<br>
+                            世界でもここでしか見られない神秘の生物を、ぜひその目でご覧ください。</p>
+                    </div>
+
+                    <div>
+                        <p>＜特徴＞</p>
+                        <p class="highlights-box-A-text">
+                            ・水深8000m以上の極限環境に生息する、発光性クラゲの新種。<br>
+                            ・まるで星雲のように揺らめく青白い発光が特徴<br>
+                            ・微細な触手から電磁波を放つ</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
     <footer>
