--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <div class="highlights-box-A">
                         <p>B3F 人工深海ドーム</p>
                         <p class="highlights-box-A-text">完全に外界の光を遮断し、深海8000m級の環境を再現した特別エリアです。<br>
-                            ここでしか見られない未知の深海生物たちが、ゆらめく光の中で神秘的な姿を見せます。</p>
+                            ここでしか見られない未知の深海生物が、ゆらめく光の中で神秘的な姿を見せます。</p>
                     </div>
                     <div class="highlights-box-B">
                         <img src="./pic/B3a.png">
@@ -258,7 +258,7 @@
                         <p>＜特別展示エリア（B3F）＞</p>
                         <p class="highlights-box-A-text">「ルミナ・フォスフォラ」の優雅に漂う姿は、まるで宇宙の星雲を眺めているよう。<br>
                             最新の環境再現技術を駆使することで、水族館内での飼育に世界で初めて成功しました。<br>
-                            世界でもここでしか見られない神秘の生物を、ぜひその目でご覧ください。</p>
+                            ここでしか見られない神秘の生物を、ぜひその目でご覧ください。</p>
                     </div>
 
                     <div>
