--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <div class="important">
         <p>重要なお知らせ</p>
         <ul>
+            <li>2025.06.13（金）いいみょうがの日</li>
+            <li>2025.06.12（木）晩餐館焼肉のたれの日</li>
             <li>2025.06.08（日）世界海洋デーのお知らせ</li>
-            <li>2025.06.01（日）防災の日・防災用品点検の日</li>
-            <li>2025.05.23（金）骨密度ケアの日</li>
         </ul>
     </div>
 
@@ -171,14 +171,14 @@
                     <p>B2</p><img src="./pic/B2.png">
                 </li>
                 <li>
-                    <p>B3</p><img src="./pic/B3.png">
+                    <p>B3</p><img src="./pic/B32.png">
                 </li>
             </ul>
 
         </div>
         <div class="highlights">
             <h4>
-                < more>
+                < pickup>
             </h4>
             <div class="highlights-box">
                 <div class="highlights-box-item">
@@ -216,7 +216,7 @@
 
                 <div class="highlights-box-item">
                     <div class="highlights-box-A">
-                        <p>B3F 人工深海ドーム</p>
+                        <p>B3F 人工深海エリア</p>
                         <p class="highlights-box-A-text">完全に外界の光を遮断し、深海8000m級の環境を再現した特別エリアです。<br>
                             ここでしか見られない未知の深海生物が、ゆらめく光の中で神秘的な姿を見せます。</p>
                     </div>
@@ -255,7 +255,7 @@
                     </div>
 
                     <div>
-                        <p>＜特別展示エリア（B3F）＞</p>
+                        <p>＜人工深海エリア（B3F）＞</p>
                         <p class="highlights-box-A-text">「ルミナ・フォスフォラ」の優雅に漂う姿は、まるで宇宙の星雲を眺めているよう。<br>
                             最新の環境再現技術を駆使することで、水族館内での飼育に世界で初めて成功しました。<br>
                             ここでしか見られない神秘の生物を、ぜひその目でご覧ください。</p>
